2009-07-09  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/jnlp/cache/ResourceTracker.java:
	(downloadResource): Accept and download content with pack200 or gzip
	compression and uncompress it on the fly.
	(initializeResource): Accept content with pack200 or gzip compression.
	(getVersionedResourceURL): Add javadoc.

2009-07-09  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Add suppport for cookie info requests from applets.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Rework cookie support
	to make it dynamic.
	* plugin/icedtea/sun/applet/PluginMain.java: Wire in custom cookie store
	that dynamically requests cookie information from C++ side.
	* rt/net/sourceforge/jnlp/JNLPFile.java: Remove old cookie handling code.
	* rt/net/sourceforge/jnlp/Launcher.java: Same.
	* rt/net/sourceforge/jnlp/NetxPanel.java: Same.
	* rt/net/sourceforge/jnlp/PluginBridge.java: Same.
	* rt/net/sourceforge/jnlp/cache/CacheUtil.java: Same.
	* rt/net/sourceforge/jnlp/cache/Resource.java: Same.
	* rt/net/sourceforge/jnlp/cache/ResourceTracker.java: Same.
	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Same.

2009-07-09  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::SharkBuilder):  Pass the LLVMContext returned
	from getGlobalContext() to the new IRBuilder constructor
	when llvm version are 2.6 or later to handle LLVM API change.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.cpp:
	New methods allocateGlobal, setPoisonMemory, dependent on the
	llvm version.
	* ports/hotspot/src/share/vm/shark/sharkMemoryManager.hpp:
	Likewise.
 
2009-07-08  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::pointer_constant): Pass the LLVMContext returned
	from getGlobalContext() to the new GlobalVariable constructor
	when llvm version are 2.6 or later to handle LLVM API change.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp