@@ -1,5 +1,11 @@
 2009-07-09  Omair Majid  <omajid@redhat.com>
 
+	* rt/net/sourceforge/jnlp/Launcher.java
+	(launchApplication): Call setContextClassLoaderForAllThreads.
+	(setContextClassLoaderForAllThreads): New function.
+
+2009-07-09  Omair Majid  <omajid@redhat.com>
+
 	* rt/net/sourceforge/jnlp/cache/ResourceTracker.java:
 	(downloadResource): Accept and download content with pack200 or gzip
 	compression and uncompress it on the fly.
